testdata/baselines/reference/submodule/compiler/argumentsReferenceInMethod4_Js.errors.txt
/a.js(11,8): error TS2339: Property 'foo' does not exist on type 'A'.
/a.js(16,9): error TS1210: Code contained in a class is evaluated in JavaScript's strict mode which does not allow this use of 'arguments'. For more information, see https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Strict_mode.
/a.js(21,8): error TS2339: Property 'bar' does not exist on type 'A'.
/a.js(21,24): error TS2339: Property 'bar' does not exist on type 'object'.
/a.js(26,8): error TS2339: Property 'baz' does not exist on type 'A'.
/a.js(31,8): error TS2339: Property 'options' does not exist on type 'A'.


==== /a.js (6 errors) ====
    class A {
    	/**
    	 * @param {object} [foo={}]
    	 */
    	m(foo = {}) {
    		const key = "bar";
    
    		/**
    		 * @type object
    		 */
    		this.foo = foo;
    		     ~~~
!!! error TS2339: Property 'foo' does not exist on type 'A'.
    
    		/**
    		 * @type object
    		 */
    		const arguments = this.arguments;
    		      ~~~~~~~~~
!!! error TS1210: Code contained in a class is evaluated in JavaScript's strict mode which does not allow this use of 'arguments'. For more information, see https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Strict_mode.
    
    		/**
    		 * @type object
    		 */
    		this.bar = arguments.bar;
    		     ~~~
!!! error TS2339: Property 'bar' does not exist on type 'A'.
    		                     ~~~
!!! error TS2339: Property 'bar' does not exist on type 'object'.
    
    		/**
    		 * @type object
    		 */
    		this.baz = arguments[key];
    		     ~~~
!!! error TS2339: Property 'baz' does not exist on type 'A'.
    
    		/**
    		 * @type object
    		 */
    		this.options = arguments;
    		     ~~~~~~~
!!! error TS2339: Property 'options' does not exist on type 'A'.
    	}
    
    	get arguments() {
    		return { bar: {} };
    	}
    }
    